--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.VisitKorea">
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="{applicationId}.androidx-startup"
+            android:exported="false"
+            tools:replace="android:authorities">
+            <meta-data
+                android:name="androidx.work.WorkManagerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove"/>
+        </provider>
+
         <activity
             android:name=".presentation.splash.SplashActivity"
             android:exported="true"
