--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         </activity>
 
         <activity android:name=".presentation.main.MainActivity"/>
+        <activity android:name=".presentation.more.MoreActivity"/>
     </application>
 
 </manifest>
