feat: pass data to DetailActivity
*add Parcelize annotation to DetailParcel

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
 
         <activity android:name=".presentation.main.MainActivity"/>
         <activity android:name=".presentation.more.MoreActivity"/>
+        <activity android:name=".presentation.detail.DetailActivity"/>
     </application>
 
 </manifest>
